--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -5,7 +5,9 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
-        <property name="context-root" value="neig.pointsmanager"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/config/log4j2"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/config/mybatis"/>
         <property name="java-output-path" value="/neig.pointsmanager Maven Webapp/target/classes"/>
+        <property name="context-root" value="/pointsmanager"/>
     </wb-module>
 </project-modules>
