--- a/src/main/webapp/css/headnav.css
+++ b/src/main/webapp/css/headnav.css
@@ -1,7 +1,7 @@
 @CHARSET "UTF-8";
 @media only screen and (min-width: 1025px) {
 .smallnav,.only-phone{ display:none;}
-.shopNav{padding-top:13px; padding-bottom:5px;margin:0px 40px 10px 0px;}
+.shopNav{padding-top:13px; padding-bottom:5px;margin:0px 40px 0px 0px;}
 .slideall{margin:0px auto;max-width:1000px ;padding-top: 45px;}
 .am-container { padding-left:0rem;padding-right:0rem;max-width: 1000px;}
 .am-g-fixed{max-width:1000px;}
@@ -13,7 +13,7 @@
 .shopNavfloat{float:left; position:static; margin-top:-4px;display: block;}
 #nav {display:block;position: absolute;display: block;z-index: 10002;}
 /*第一套轮播图布局*/	
-.banner{position: absolute;left:0px;top:180px;z-index:9 ;border-top:2px solid #d2364c;}
+.banner{left:0px;top:180px;z-index:9 ;}
 .banner .am-slider .am-slides li{height:360px;}
 .banner .am-slider .am-slides li.banner4{background: #ff9801;}
 .banner .am-slider .am-slides li.banner1{background: #55be59;}
