新增用户优惠卷查询

--- a/src/main/webapp/css/stepstyle.css
+++ b/src/main/webapp/css/stepstyle.css
@@ -30,11 +30,57 @@ vertical-align: top;margin-top: 5px;margin-left: -24px;color: #b5b5b5;font-size:
 .am-form-group.select .am-selected-status{color:#b5b5b5;}
 .info-btn{text-align: center;padding-bottom: 10px;}
 
+/*实名认证*/
+.authentication{width: 100%;}
+.authentication p.tip{line-height:30px;padding:0px 10px 5px;}
+.authenticationInfo .title,.authenticationPic .title{font-size:14px ;line-height:30px ;padding:0px 10px;background:#f5f5f5 ;font-weight: 600;border-top: 1px solid #eee;border-bottom: 1px solid #eee;}
+.authenticationInfo .am-form-group{margin:0px auto ;height: 42px;line-height:42px ;padding:0px 10px;}
+.authenticationInfo .am-form-group input{border: none !important;outline:medium !important;height: 38px;line-height:38px ;vertical-align:baseline;}
+.authenticationInfo .am-form-content{border-bottom: 1px solid #eee;}
 
+.authenticationPic .title{text-align: center;}
+.authenticationPic p.tip{line-height:28px ;} 
+.cardlist {overflow: hidden;padding:0px 10px 20px;}
+.cardlist li{float: left;width:50% ;}
+.cardlist li .cardExample,.cardlist li .cardPic p.titleText{display: none;}
+.cardlist li .cardPic{min-width: 120px;min-height: 80px;width:96%;margin:0px auto;text-align: center;position: relative;}
+.cardlist li .cardPic img,.cardlist li .cardExample img{background:#f5f5f5;border: 1px dashed #ddd;width: 100%;}
+.cardlist li .cardPic .cardText{position: absolute;top:50%;margin-top: -23px;left:50% ;margin-left:-24px ;}
+.cardlist li .cardPic i{font-size:24px;color:#999 ;}
 
+.authentication .info-btn{width:100% ;padding:0px 10px ;}
+.authentication .info-btn .am-btn{display: block;}
 @media only screen and (min-width: 640px){
 .am-form-label { width:70px; }
 .am-form{width:70%;}
-	
+
+/*实名认证*/
+.authenticationInfo .title, .authenticationPic .title{background: none; border-top: none;text-align: left;}
+.authenticationInfo .am-form-group {padding-left:30px;height: 60px;line-height: 60px;}
+.authenticationInfo .am-form-group .am-form-label{text-align: left;}
+.authenticationInfo .am-form-content{border: none;}
+.authenticationInfo .am-form-group input {height:36px;line-height:36px;border: 1px solid #eee !important;width: 200px;outline: none;padding:0px 5px ;}
+/*示例*/
+.cardlist{padding:10px 0px 20px;}
+.cardlist li{float:none;width:100% ;overflow: hidden;}
+.cardlist li .cardPic,.cardlist li .cardExample{width: 210px;float: left;margin:30px 0px 10px 30px;display: block;position: relative;}	
+.cardlist li .cardPic  p.titleText,.cardlist li .cardExample  p.titleText{position: absolute;display: block;top:-25px;}
+.authenticationPic p.tip{display: none;}
+.authentication .info-btn{width:160px ;margin-left:30px ;padding: 0px;}
+
+
 }
+
+@media only screen and (min-width:1024px){
+.cardlist{margin-left:20px ;}	
+.cardlist li .cardPic{margin-left:90px;}
+.cardlist li .cardPic  p.titleText{left: -80px;top:0px;text-align: right;width: 70px;}
+.cardlist li .cardExample {margin-left:50px;}
+.cardlist li .cardExample  p.titleText{left: -40px;top:0px;text-align: right;width:30px;}
+.authentication .info-btn{width:160px ;margin-left:110px ;}
+
+}
+
+
+
 
