新增 账户充值 分红提现

--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -6,7 +6,9 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/config/log4j2"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/config/mybatis"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
+        <wb-resource deploy-path="/" source-path="/target/neig.pointsmanager"/>
         <property name="java-output-path" value="/neig.pointsmanager Maven Webapp/target/classes"/>
-        <property name="context-root" value="/pointsmanager"/>
+        <property name="context-root" value="/"/>
     </wb-module>
 </project-modules>
